Added subscriber support for Hazelcast connector